<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <com.db.chart.view.LineChartView
            xmlns:chart="http://schemas.android.com/apk/res-auto"
            android:id="@+id/linechart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/material_white"
            android:contentDescription="@string/linechart" />

        <TextView
            android:id="@+id/chart_empty"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/chart_empty"
            android:contentDescription="@string/chart_empty"
            android:gravity="center_horizontal"
            android:background="@color/material_white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/material_black" />

    </FrameLayout>

    <android.support.v7.widget.GridLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/gridlayout_detail"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        app:columnCount="2"
        android:background="@color/material_grey_800">

        <TextView
            android:id="@+id/gridlayout_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/gridlayout_symbol"
            app:layout_columnWeight="1"
            android:padding="16dp" />

        <TextView
            android:id="@+id/gridlayout_symbol_value"
            android:gravity="center_vertical"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_columnWeight="1" />

        <TextView
            android:id="@+id/gridlayout_bid_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/gridlayout_bid_price"
            app:layout_columnWeight="1"
            android:padding="16dp" />

        <TextView
            android:id="@+id/gridlayout_bid_price_value"
            android:gravity="center_vertical"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_columnWeight="1" />

        <TextView
            android:id="@+id/gridlayout_percent_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/gridlayout_percent_change"
            app:layout_columnWeight="1"
            android:padding="16dp" />

        <TextView
            android:id="@+id/gridlayout_percent_change_value"
            android:gravity="center_vertical"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_columnWeight="1" />

    </android.support.v7.widget.GridLayout>

</LinearLayout>